--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 
 Homepage::  http://selenium.rubyforge.org
 Author::    Shane
-Copyright:: (c) 2006 Selenium on rubyforge
+Copyright:: (c) 2006 Selenium-Ruby on rubyforge
 License::   Apache License 2.0 (http://www.apache.org/licenses/LICENSE-2.0.txt)
 
 Selenium Ruby[http://selenium.rubyforge.org] is a project that wraps selenium-rc[http://www.openqa.org/selenium-rc/]
